@@ -98,11 +98,6 @@
 			<version>31.0.1-jre</version>
 		</dependency>
 		<dependency>
-			<groupId>com.belerweb</groupId>
-			<artifactId>pinyin4j</artifactId>
-			<version>2.5.0</version>
-		</dependency>
-		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>4.1.42.Final</version>
@@ -202,6 +197,12 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>transmittable-thread-local</artifactId>
 			<version>2.12.1</version>
+		</dependency>
+		<!-- EasyExcel -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>easyexcel</artifactId>
+			<version>3.1.5</version>
 		</dependency>
 		<!-- //////////////////// 日志相关 //////////////////// -->
 		<!--		<dependency>-->
@@ -305,8 +306,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>19</source>
-					<target>19</target>
+					<source>17</source>
+					<target>17</target>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
